--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -47,19 +47,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies on Linux
-        if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: |
-          sudo apt update
-          sudo apt install libwebkit2gtk-4.1-dev \
-          build-essential \
-          curl \
-          wget \
-          file \
-          libxdo-dev \
-          libssl-dev \
-          libayatana-appindicator3-dev \
-          librsvg2-dev
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
@@ -87,21 +74,6 @@ jobs:
       #      - name: Install Tauri CLI
       #        run: pnpm add -g @tauri-apps/cli
 
-      # Bash 设置变量（Linux/macOS）
-      - name: Set file name and download URL (Unix)
-        if: runner.os != 'Windows'
-        shell: bash
-        run: |
-          FILE_NAME="Xray-${{ matrix.xray_os }}-${{ matrix.xray_arch }}.zip"
-          FILE_URL="https://github.com/XTLS/Xray-core/releases/download/${{ env.XRAY_VERSION }}/$FILE_NAME"
-          echo "FILE_NAME=$FILE_NAME" >> $GITHUB_ENV
-          echo "FILE_URL=$FILE_URL" >> $GITHUB_ENV
-          
-          wget "$FILE_URL" -O "$FILE_NAME"
-          
-          mkdir -p src-tauri/ray/
-          unzip -o "$FILE_NAME" -d src-tauri/ray
-
       # PowerShell 设置变量（Windows）
       - name: Set file name and download URL (Windows)
         if: runner.os == 'Windows'
@@ -117,6 +89,35 @@ jobs:
 
           New-Item -ItemType Directory -Force -Path src-tauri/ray | Out-Null
           Expand-Archive -Path $fileName -DestinationPath src-tauri/ray -Force
+
+      # Bash 设置变量（Linux/macOS）
+      - name: Set file name and download URL (Unix)
+        if: runner.os != 'Windows'
+        shell: bash
+        run: |
+          FILE_NAME="Xray-${{ matrix.xray_os }}-${{ matrix.xray_arch }}.zip"
+          FILE_URL="https://github.com/XTLS/Xray-core/releases/download/${{ env.XRAY_VERSION }}/$FILE_NAME"
+          echo "FILE_NAME=$FILE_NAME" >> $GITHUB_ENV
+          echo "FILE_URL=$FILE_URL" >> $GITHUB_ENV
+
+          wget "$FILE_URL" -O "$FILE_NAME"
+
+          mkdir -p src-tauri/ray/
+          unzip -o "$FILE_NAME" -d src-tauri/ray
+
+      - name: Install dependencies on Linux
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: |
+          sudo apt update
+          sudo apt install -y \
+            pkg-config \
+            build-essential \
+            libxdo-dev \
+            libssl-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev \
+            libwebkit2gtk-4.1-dev \
+            libgtk-3-dev
 
       #      - name: Clean up
       #        run: rm "$FILE_NAME"
