--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -16,30 +16,35 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: windows-latest
+          - xray_os: windows
+            xray_arch: 64
+            os: windows-latest
             target: x86_64-pc-windows-msvc
-            xray_os: windows
-            xray_arch: 64
-          - os: windows-latest
+
+          - xray_os: windows
+            xray_arch: arm64-v8a
+            os: windows-latest
             target: aarch64-pc-windows-msvc
-            xray_os: windows
-            xray_arch: arm64-v8a
-          - os: macos-13
+
+          - xray_os: macos
+            xray_arch: 64
+            os: macos-13
             target: x86_64-apple-darwin
-            xray_os: macos
-            xray_arch: 64
-          - os: macos-latest
-            target: aarch64-apple-darwin
-            xray_os: macos
+
+          - xray_os: macos
             xray_arch: arm64-v8a
-          - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-            xray_os: linux
+            os: macos-latest
+            target: aarch64-apple-darwin
+
+          - xray_os: linux
             xray_arch: 64
-#          - os: ubuntu-latest
-#            target: aarch64-unknown-linux-gnu
-#            xray_os: linux
-#            xray_arch: arm64-v8a
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+
+    #          - os: ubuntu-latest
+    #            target: aarch64-unknown-linux-gnu
+    #            xray_os: linux
+    #            xray_arch: arm64-v8a
 
     runs-on: ${{ matrix.os }}
 
